# filler

./: CMakeLists.txt  Makefile  README.md  bpole.filler  filler.h  filler.trace  head_map.c  main.c  read_fil.c  read_piece.c  search_solution.c  test  thinker.c  utils.c
resources/: filler.trace
resources/maps/: map00
resources/players/: bpole.filler
visual/: Makefile  bresenham.c  control.c  creat_imag.c  double_split.c  filler_visual.h  head_map.c  loop_key_hook.c  main.c  mouse_press.c  read_fight.c  read_payer.c  render.c  transform.c  utils.c  visual_fil
